--- a/application/admin/view/article/index.html
+++ b/application/admin/view/article/index.html
@@ -13,11 +13,11 @@
                 <ul class="tab-title">
                     <li class="active">
                         <i class=""></i>
-                        <span>文章管理</span>
+                        <span>新闻管理</span>
                     </li>
                     <li class="">
                         <i class=""></i>
-                        <span><a href="{:Url('add')}">添加文章</a></span>
+                        <span><a href="{:Url('add')}">添加新闻</a></span>
                     </li>
                 </ul>
             </blockquote>
@@ -38,41 +38,35 @@
             <colgroup>
                 <col width="100">
                 <col width="400">
+                <col width="100">
                 <col width="200">
                 <col width="100">
-                <col width="100">
                 <col width="150">
-                <col width="100">
-                <col width="220">
             </colgroup>
             <thead>
-                <tr>
-                    <th>编号</th>
-                    <th>标题</th>
-                    <th>作者</th>
-                    <th>点击量</th>
-                    <th>点赞量</th>
-                    <th>发布时间</th>
-                    <th>状态</th>
-                    <th>操作</th>
-                </tr>
+            <tr>
+                <th>编号</th>
+                <th>标题</th>
+                <th>浏览量</th>
+                <th>发布时间</th>
+                <th>状态</th>
+                <th>操作</th>
+            </tr>
             </thead>
             <tbody>
-                {volist name='lists' id='vo'}
-                    <tr>
-                        <td>{$vo.id}</td>
-                        <td>{$vo.title}</td>
-                        <td>{$vo.uid}</td>
-                        <td>{$vo.hits}</td>
-                        <td>{$vo.likes}</td>
-                        <td>{$vo.create_time|date='Y-m-d H:i:s',###}</td>
-                        <td>{$vo.status ? '<font color="red">√</font>' : '<font color="red">╳</font>'}</td>
-                        <td>
-                            <a class="layui-btn layui-btn-small" href="{:Url('edit',['id' => $vo.id])}" title="编辑"><i class="layui-icon">&#xe642;</i></a>
-                            <a class="layui-btn layui-btn-small layui-btn-danger delete" href="{:Url('delete')}" data-id="{$vo.id}" title="删除"><i class="layui-icon">&#xe640;</i></a>
-                        </td>
-                    </tr>
-                {/volist}
+            {volist name='lists' id='vo'}
+            <tr>
+                <td>{$vo.id}</td>
+                <td>{$vo.title}</td>
+                <td>{$vo.hits}</td>
+                <td>{$vo.create_time}</td>
+                <td>{$vo.status ? '<font color="red">√</font>' : '<font color="red">╳</font>'}</td>
+                <td>
+                    <a class="layui-btn layui-btn-small" href="{:Url('edit',['id' => $vo.id])}" title="编辑"><i class="layui-icon">&#xe642;</i></a>
+                    <a class="layui-btn layui-btn-small layui-btn-danger delete" href="{:Url('delete')}" data-id="{$vo.id}" title="删除"><i class="layui-icon">&#xe640;</i></a>
+                </td>
+            </tr>
+            {/volist}
             </tbody>
         </table>
 
