--- a/application/admin/view/slide/index.html
+++ b/application/admin/view/slide/index.html
@@ -13,11 +13,11 @@
                 <ul class="tab-title">
                     <li class="active">
                         <i class=""></i>
-                        <span>文章管理</span>
+                        <span>幻灯片管理</span>
                     </li>
                     <li class="">
                         <i class=""></i>
-                        <span><a href="{:Url('add')}">添加文章</a></span>
+                        <span><a href="{:Url('add')}">添加幻灯片</a></span>
                     </li>
                 </ul>
             </blockquote>
@@ -36,40 +36,38 @@
             <div class="layui-form-item"  style="margin-bottom:0px;">
                 <!--分类-->
                 分类：
-                <select name="category_id" style="display: inline;vertical-align: middle;border: 1px solid #ccc;height: 38px;">
+                <select name="cid" style="display: inline;vertical-align: middle;border: 1px solid #ccc;height: 38px;width: 120px;">
                     <option value="">请选择</option>
-                    {volist name='category_lists' id='vo'}
-                    <option value="{$vo.id}" {if condition="$category_id eq $vo.id"}selected{/if}>{$vo.title_show}</option>
+                    {volist name='cat_lists' id='vo'}
+                    <option value="{$vo.id}" {if condition="$cid eq $vo.id"}selected{/if}>{$vo.name}</option>
                     {/volist}
                 </select>
-                时间：
-                <input class="search-input layui-input" placeholder="开始日" id="start_time" name="start_time" value="{$start_time}"> -
-                <input class="search-input layui-input" placeholder="截止日" id="end_time" name="end_time" value="{$end_time}">
-                关键字：
-                <input type="text" name="keywords" placeholder="请输入关键字" value="{$keywords}" autocomplete="off" class="search-input layui-input">
                 <button class="layui-btn" lay-submit="" lay-filter="theForm">搜索</button>
             </div>
         </form>
     </div>
 
-
     <!--表格-->
     <div class="lmx-table">
         <table class="layui-table">
             <colgroup>
-                <col width="100">
+                <col width="50">
+                <col width="50">
                 <col width="400">
+                <col width="300">
                 <col width="100">
-                <col width="200">
                 <col width="100">
-                <col width="150">
+                <col width="100">
+                <col width="130">
             </colgroup>
             <thead>
             <tr>
+                <th>排序</th>
                 <th>编号</th>
                 <th>标题</th>
-                <th>浏览量</th>
-                <th>发布时间</th>
+                <th>描述</th>
+                <th>链接</th>
+                <th>图片</th>
                 <th>状态</th>
                 <th>操作</th>
             </tr>
@@ -77,11 +75,13 @@
             <tbody>
             {volist name='lists' id='vo'}
             <tr>
+                <td>{$vo.listorder}</td>
                 <td>{$vo.id}</td>
-                <td>{$vo.title}</td>
-                <td>{$vo.hits}</td>
-                <td>{$vo.create_time}</td>
-                <td>{$vo.status ? '<font color="red">√</font>' : '<font color="red">╳</font>'}</td>
+                <td>{$vo.name}</td>
+                <td>{$vo.des}</td>
+                <td>{$vo.url}</td>
+                <td><img src="{$Think.config.sys_config.lmx_upload_url}/{$vo.pic ?? ''}" width="100" height="100"></td>
+                <td>{$vo.status? '<font color="red">√</font>' : '<font color="red">╳</font>'}</td>
                 <td>
                     <a class="layui-btn layui-btn-small" href="{:Url('edit',['id' => $vo.id])}" title="编辑"><i class="layui-icon">&#xe642;</i></a>
                     <a class="layui-btn layui-btn-small layui-btn-danger delete" href="{:Url('delete')}" data-id="{$vo.id}" title="删除"><i class="layui-icon">&#xe640;</i></a>
@@ -107,44 +107,7 @@
 {block name="js"}
 {__block__}
 
-<script>
-    layui.use('laydate', function(){
-        var laydate = layui.laydate
-
-        var start = {
-            //min: laydate.now(),
-            max: '2099-06-16 23:59:59'
-            ,istoday: false
-            ,choose: function(datas){
-                end.min = datas; //开始日选好后，重置结束日的最小日期
-                end.start = datas //将结束日的初始值设定为开始日
-            }
-        };
-
-        var end = {
-            //min: laydate.now(),
-            max: '2099-06-16 23:59:59'
-            ,istoday: false
-            ,choose: function(datas){
-                start.max = datas; //结束日选好后，重置开始日的最大日期
-            }
-        };
-
-        document.getElementById('start_time').onclick = function(){
-            start.elem = this;
-            laydate(start);
-        }
-        document.getElementById('end_time').onclick = function(){
-            end.elem = this
-            laydate(end);
-        }
-    });
-</script>
-
 <script src="{$Think.config.sys_config.lmx_static_url}/modules/admin/base/js/main.js?t={$Think.config.sys_config.lmx_version}"></script>
 
 
 {/block}
-
-
-
