--- a/application/admin/view/slide_cat/add.html
+++ b/application/admin/view/slide_cat/add.html
@@ -13,11 +13,11 @@
                 <ul class="tab-title">
                     <li class="">
                         <i class=""></i>
-                        <span><a href="{:Url('index')}">分类管理</a></span>
+                        <span><a href="{:Url('index')}">幻灯片分类管理</a></span>
                     </li>
                     <li class="active">
                         <i class=""></i>
-                        <span>{$title}</span>
+                        <span><a href="#">添加分类</a></span>
                     </li>
                 </ul>
             </blockquote>
@@ -41,35 +41,15 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">分类名称</label>
                     <div class="layui-input-block">
-                        <input type="text" name="title" value="{$Cate.title ?? ''}" required  lay-verify="required" placeholder="请输入分类名称" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <!--上级分类-->
-                <div class="layui-form-item">
-                    <label class="layui-form-label">上级分类</label>
-                    <div class="layui-input-block">
-                        <select name="pid" lay-verify="required" autocomplete="off">
-                            <option value="0">一级分类</option>
-                            {volist name='lists' id='vo'}
-                                <option value="{$vo.id}" {if condition="$pid eq $vo.id"}selected{/if}>{$vo.title_show}</option>
-                            {/volist}
-                        </select>
+                        <input type="text" name="name" value="{$SlideCat.name ?? ''}" required  lay-verify="required" placeholder="请输入分类名称" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
-                <!--备注-->
-                <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">分类描述</label>
-                    <div class="layui-input-block">
-                        <textarea name="description" placeholder="请输入内容" class="layui-textarea">{$Cat.description ?? ''}</textarea>
-                    </div>
-                </div>
-
-                <!--排序-->
+                <!--分类唯一标识-->
                 <div class="layui-form-item">
-                    <label class="layui-form-label">排序</label>
+                    <label class="layui-form-label">分类标识</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="listorder" value="{$Cate.listorder ?? ''}" placeholder="请输入排序" autocomplete="off" class="layui-input">
+                        <input type="text" name="idname" value="{$SlideCat.idname ?? ''}" required lay-verify="required" placeholder="请输入分类唯一标识" autocomplete="off" class="layui-input">
                     </div>
                     <div class="layui-form-mid layui-word-aux">辅助文字</div>
                 </div>
@@ -78,8 +58,16 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">状态</label>
                     <div class="layui-input-block">
-                        <input type="radio" name="status" value="0" title="禁用"  autocomplete="off" {if condition="(empty($Cate.status))"}checked{/if}>
-                        <input type="radio" name="status" value="1" title="启用"  autocomplete="off" {if condition="(!empty($Cate.status) and ($Cate.status eq 1))"}checked{/if}>
+                        <input type="radio" name="status" value="0" title="禁用"  autocomplete="off" {if condition="(empty($SlideCat.status))"}checked{/if}>
+                        <input type="radio" name="status" value="1" title="正常"  autocomplete="off" {if condition="(!empty($SlideCat.status) and ($SlideCat.status eq 1))"}checked{/if}>
+                    </div>
+                </div>
+
+                <!--备注-->
+                <div class="layui-form-item layui-form-text">
+                    <label class="layui-form-label">备注</label>
+                    <div class="layui-input-block">
+                        <textarea name="remark" placeholder="请输入内容" class="layui-textarea">{$SlideCat.remark ?? ''}</textarea>
                     </div>
                 </div>
 
@@ -98,6 +86,7 @@
 </section>
 
 {/block}
+
 
 <!--页面JS脚本-->
 {block name="script"}
@@ -129,7 +118,7 @@
                     layer.msg(res.msg);
                     if (res.code == 1){
                         setTimeout(function () {
-                            window.location.href = res.url;
+                            window.location.href = "{:Url('index')}";
                         },1000);
                     }
                 },
@@ -147,5 +136,4 @@
 
 
 {/block}
-
 
