--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -65,11 +65,11 @@
         <!--左侧 start-->
         <div class="lmx-left" id="lmx-left">
 
-            <div class="lmx-left-manual">
-                <span class="lmx-left-manual-switch">
-                    <i class="fa fa-angle-double-left" id="close" title="关闭侧边栏"></i>
-                </span>
-            </div>
+            <!--<div class="lmx-left-manual">-->
+                <!--<span class="lmx-left-manual-switch">-->
+                    <!--<i class="fa fa-angle-double-left" id="close" title="关闭侧边栏"></i>-->
+                <!--</span>-->
+            <!--</div>-->
 
             <div class="lmx-left-nav">
 
@@ -181,6 +181,11 @@
 
             <!--内容主体 end-->
 
+            <div class="lmx-left-manual">
+                <span class="lmx-left-manual-switch">
+                    <i class="fa fa-angle-double-left" id="close" title="关闭侧边栏"></i>
+                </span>
+            </div>
 
         </div>
         <!--内容部分 end-->
