--- a/application/admin/view/slide/add.html
+++ b/application/admin/view/slide/add.html
@@ -90,7 +90,7 @@
 
                     <div class="layui-input-block">
                         <div class="site-demo-upload">
-                            <img id="pic_upload" src="{if condition='!empty($Slide.pic)'}{$Think.config.sys_config.lmx_upload_url}/{$Slide.pic}{else /}{$Think.config.sys_config.lmx_static_url}/modules/admin/base/images/default-thumbnail.png{/if}">
+                            <img id="pic_upload" src="{if condition='!empty($Slide.pic)'}{$Slide.pic|sp_get_image_preview_url}{else /}{$Think.config.sys_config.lmx_static_url}/modules/admin/base/images/default-thumbnail.png{/if}">
                             <div class="site-demo-upbar">
                                 <input name="image" class="layui-upload-file" id="image" type="file">
                             </div>
@@ -179,7 +179,7 @@
 
                 if (res.data.title){
                     $("#pic").val(res.data.title);
-                    $("#pic_upload").attr('src','{$Think.config.sys_config.lmx_upload_url}/' + res.data.title);
+                    $("#pic_upload").attr('src','{:sp_get_image_preview_url()}' + res.data.title);
                 }
 
             }
