--- a/application/admin/view/slide/add.html
+++ b/application/admin/view/slide/add.html
@@ -102,19 +102,17 @@
                 <!--链接-->
                 <div class="layui-form-item">
                     <label class="layui-form-label">链接</label>
-                    <div class="layui-input-inline">
+                    <div class="layui-input-block">
                         <input type="text" name="url" value="{$Slide.url ?? ''}" required lay-verify="required" placeholder="请输入链接" autocomplete="off" class="layui-input">
                     </div>
-                    <div class="layui-form-mid layui-word-aux">辅助文字</div>
                 </div>
 
                 <!--描述-->
                 <div class="layui-form-item">
                     <label class="layui-form-label">描述</label>
-                    <div class="layui-input-inline">
+                    <div class="layui-input-block">
                         <input type="text" name="des" value="{$Slide.des ?? ''}" required lay-verify="required" placeholder="请输入描述" autocomplete="off" class="layui-input">
                     </div>
-                    <div class="layui-form-mid layui-word-aux">辅助文字</div>
                 </div>
 
 
