--- a/application/admin/view/rbac/index.html
+++ b/application/admin/view/rbac/index.html
@@ -82,13 +82,13 @@
 {block name="js"}
 {__block__}
 
-<script src="{$Think.config.sys_config.lmx_static_url}/modules/admin/base/js/main.js?t={$Think.config.sys_config.lmx_version}"></script>
+<script src="{:sp_get_asset_static_path()}/modules/admin/base/js/main.js?t={:sp_get_static_version()}"></script>
 
-<link rel="stylesheet" href="{$Think.config.sys_config.lmx_static_url}/zTree_v3-master/css/zTreeStyle/zTreeStyle.css?t={$Think.config.sys_config.lmx_version}" type="text/css">
+<link rel="stylesheet" href="{:sp_get_asset_static_path()}/zTree_v3-master/css/zTreeStyle/zTreeStyle.css?t={:sp_get_static_version()}" type="text/css">
 
-<script src="{$Think.config.sys_config.lmx_static_url}/zTree_v3-master/js/jquery.ztree.core.js?t={$Think.config.sys_config.lmx_version}"></script>
-<script src="{$Think.config.sys_config.lmx_static_url}/zTree_v3-master/js/jquery.ztree.excheck.js?t={$Think.config.sys_config.lmx_version}"></script>
-<script src="{$Think.config.sys_config.lmx_static_url}/zTree_v3-master/js/jquery.ztree.exedit.js?t={$Think.config.sys_config.lmx_version}"></script>
+<script src="{:sp_get_asset_static_path()}/zTree_v3-master/js/jquery.ztree.core.js?t={:sp_get_static_version()}"></script>
+<script src="{:sp_get_asset_static_path()}/zTree_v3-master/js/jquery.ztree.excheck.js?t={:sp_get_static_version()}"></script>
+<script src="{:sp_get_asset_static_path()}/zTree_v3-master/js/jquery.ztree.exedit.js?t={:sp_get_static_version()}"></script>
 
 
 
