--- a/application/admin/view/slide/index.html
+++ b/application/admin/view/slide/index.html
@@ -107,7 +107,7 @@
 {block name="js"}
 {__block__}
 
-<script src="{$Think.config.sys_config.lmx_static_url}/modules/admin/base/js/main.js?t={$Think.config.sys_config.lmx_version}"></script>
+<script src="{:sp_get_asset_static_path()}/modules/admin/base/js/main.js?t={:sp_get_static_version()}"></script>
 
 
 {/block}
