--- a/application/admin/view/test/add.html
+++ b/application/admin/view/test/add.html
@@ -109,7 +109,7 @@
 <!--JS引用-->
 {block name="js"}
 {__block__}
-    <script src="{$Think.config.sys_config.lmx_static_url}/modules/admin/node/js/add.js?t={$Think.config.sys_config.lmx_version}"></script>
+    <script src="{:sp_get_asset_static_path()}/modules/admin/node/js/add.js?t={:sp_get_static_version()}"></script>
 
 {/block}
 
