--- a/application/admin/view/header.html
+++ b/application/admin/view/header.html
@@ -1,15 +1,15 @@
 
 
 <!--layui css-->
-<link rel="stylesheet" href="{$Think.config.sys_config.lmx_static_url}/layui/css/layui.css?t={$Think.config.sys_config.lmx_version}" >
+<link rel="stylesheet" href="{:sp_get_asset_static_path()}/layui/css/layui.css?t={:sp_get_static_version()}" >
 <!--图标css-->
-<link rel="stylesheet" href="{$Think.config.sys_config.lmx_static_url}/font-awesome-4.7.0/css/font-awesome.min.css?t={$Think.config.sys_config.lmx_version}" >
+<link rel="stylesheet" href="{:sp_get_asset_static_path()}/font-awesome-4.7.0/css/font-awesome.min.css?t={:sp_get_static_version()}" >
 
 <!--全局css-->
-<link rel="stylesheet" href="{$Think.config.sys_config.lmx_static_url}/common/css/global.css?t={$Think.config.sys_config.lmx_version}" >
+<link rel="stylesheet" href="{:sp_get_asset_static_path()}/common/css/global.css?t={:sp_get_static_version()}" >
 
 
 <!--[if lt IE 9]>
-<script src="{$Think.config.sys_config.lmx_static_url}/common/js/html5shiv.min.js?t={$Think.config.sys_config.lmx_version}"></script>
-<script src="{$Think.config.sys_config.lmx_static_url}/common/js/respond.min.js?t={$Think.config.sys_config.lmx_version}"></script>
+<script src="{:sp_get_asset_static_path()}/common/js/html5shiv.min.js?t={:sp_get_static_version()}"></script>
+<script src="{:sp_get_asset_static_path()}/common/js/respond.min.js?t={:sp_get_static_version()}"></script>
 <![endif]-->
