修改点击logo的跳转地址和显示名称

--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -30,8 +30,8 @@
         <!--头部 start-->
         <div class="lmx-header" id="lmx-header">
             <div class="container-fluid">
-                <a href="/ThinkCMFX/index.php?g=admin&amp;m=index&amp;a=index" class="brand">
-                    <small style="font-size: 85%;">双开APP后台管理中心</small>
+                <a href="" target="_blank" class="brand">
+                    <small style="font-size: 85%;">{$Think.config.sys_config.lmx_title ?? '后台管理'}</small>
                 </a>
                 <div class="pull-left nav_shortcuts">
                     {volist name='quick_menu' id='vo'}
