修改网站名称从配置里面读取

--- a/application/admin/view/accout/login.html
+++ b/application/admin/view/accout/login.html
@@ -10,7 +10,7 @@
 {__block__}
 
 
-        <h1>双开系统后台登录<sup>V2017</sup></h1>
+        <h1>{$Think.config.sys_config.lmx_title}<sup>V2017</sup></h1>
 
         <div class="login" style="margin-top:50px;">
 
