--- a/application/admin/view/article/index.html
+++ b/application/admin/view/article/index.html
@@ -80,7 +80,7 @@
                 <td>{$vo.id}</td>
                 <td>{$vo.title}</td>
                 <td>{$vo.hits}</td>
-                <td>{$vo.create_time}</td>
+                <td>{$vo.create_time|date='Y-m-d H:i:s',###}</td>
                 <td>{$vo.status ? '<font color="red">√</font>' : '<font color="red">╳</font>'}</td>
                 <td>
                     <a class="layui-btn layui-btn-small" href="{:Url('edit',['id' => $vo.id])}" title="编辑"><i class="layui-icon">&#xe642;</i></a>
